feat: use Kotlin native http client
This commit implements a Kotlin native http client with OkHttp. The
purpose of this change is to solve:

1. poor networking performance on Android. `dart:http` does a bad job,
   Now it's much faster than `dart:http` and `cronet_http`.
2. background http requests. `dart:http` can not perform http requests
   when app goes background.
3. more configurable. Much better than `cronet_http`.

This commit also removes unused `ImageUploadRepository`.

Now we shall spend more time on inspecting request errors and performance.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   gitsumu: ^0.7.2
   go_router: ^17.0.0
   html: ^0.15.5+1
+  http: ^1.6.0
   image_picker: ^1.2.1
   json_annotation: ^4.9.0
   loading_indicator_m3e: ^0.1.1
