--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,15 +138,18 @@ dependencies {
     // Required by flutter_local_notifications
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 
+    // For Android native http client.
+    implementation platform("com.squareup.okhttp3:okhttp-bom:5.3.2")
+    implementation "com.squareup.okhttp3:okhttp"
+
 }
 
 // Required by FDroid version policy.
 ext.abiCodes = ["x86_64": 1, "armeabi-v7a": 2, "arm64-v8a": 3]
-import com.android.build.OutputFile
 
 android.applicationVariants.all { variant ->
     variant.outputs.each { output ->
-        def abiVersionCode = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+        def abiVersionCode = project.ext.abiCodes.get(output.getFilter(com.android.build.OutputFile.ABI))
         if (abiVersionCode != null) {
             output.versionCodeOverride = variant.versionCode * 10 + abiVersionCode
         }
