--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,11 @@ dependencies:
   super_sliver_list: ^0.4.1
   system_network_proxy:
     path: ./packages/flutter_system_network_proxy/system_network_proxy
-  system_theme: ^3.1.2
+  system_theme:
+    git:
+      url: https://github.com/realth000/system_theme
+      path: system_theme
+      ref: 0e66e563ccf48735066a81b7eb55811b3af3c0d7
   talker: ^5.0.2
   talker_flutter: ^5.0.2
   universal_html: ^2.3.0
