--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
       ref: 0e66e563ccf48735066a81b7eb55811b3af3c0d7
   talker: ^5.1.13
   talker_flutter: ^5.1.13
+  text_scroll: ^0.2.1
   universal_html: ^2.3.0
   url_launcher: ^6.3.2
   uuid: ^4.5.2
